truncate correction

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -41,6 +41,7 @@
 .truncate-4 {
     display: -webkit-box;
     -webkit-line-clamp: 4;
+    line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
